# HugHigh-login-back

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py
app/api/: admin.py  auth.py  deps.py  students.py  teachers.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  auth_log.py  user.py
app/repositories/: __init__.py  auth_log_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  user.py
app/services/: __init__.py  auth_service.py
migrations/: env.py
migrations/versions/: 001_initial_tables.py
